--- a/static/styles/base.css
+++ b/static/styles/base.css
@@ -10,7 +10,12 @@ html, body {
     align-items: center;
 }
 
-input {margin-bottom: 5px; padding: 2px 3px; width: 209px;display: block;}
+input {margin-bottom: 5px; padding: 2px 3px; width: 300px;display: block;}
+
+center{
+    margin-top: 40px;
+    margin-bottom: 40px;
+}
 
 td {padding: 4px; border: 1px #CCC solid; width: 100px;}
 .highlight {
