--- a/templates/events_daily.html
+++ b/templates/events_daily.html
@@ -2,6 +2,15 @@
 {% block events_daily %}
 
   <button class = "button" onclick="window.location.href = '{{ url_for('index') }}';">Go Back</button>
+  <center><h1>{{title}} </h1>
+    <p>Allowance: {{count}} hits</p>
+    <!-- <p>Start: {{fromtime}}</p>
+    <p>Now :{{now}}</p> -->
+    {% if count == 0 %}
+        <p>{{message}}</p>
+    {% endif %}
+  </center>
+
   <center>
     <input type="text" id="search" placeholder = "Any character on the table">
       <table id="table">
@@ -10,7 +19,7 @@
    
           <th>Events</th>
         </tr>
-        {% for item in e_d%}
+        {% for item in data%}
         <tr class="search">
           <td>{{ item["date"] }}</td>
         
@@ -33,7 +42,7 @@ var chart = new Chart(ctx, {
     // The data for our dataset
     data: {
         labels: [
-            {% for item in e_d %}
+            {% for item in data %}
               "{{ item["date"] }}",
             {% endfor %}
         ],
@@ -43,7 +52,7 @@ var chart = new Chart(ctx, {
             backgroundColor: 'rgb(179, 209, 255)',
             borderColor: 'rgb(0, 102, 255)',
             data: [
-              {% for item in e_d %}
+              {% for item in data %}
                 "{{ item["events"] }}",
               {% endfor %}
             ]
