--- a/templates/stats_hourly.html
+++ b/templates/stats_hourly.html
@@ -1,6 +1,14 @@
 {% extends "base.html" %}
 {% block stats_hourly %}
 <button class="button" onclick="window.location.href = '{{ url_for('index') }}';">Go Back</button>
+<center><h1>{{title}} </h1>
+  <p>Allowance: {{count}} hits</p>
+  <!-- <p>Start: {{fromtime}}</p>
+  <p>Now :{{now}}</p> -->
+  {% if count == 0 %}
+      <p>{{message}}</p>
+  {% endif %}
+</center>
 <center class="flex-box">
   <!-- highlight the searched text makes more sense than hights on whole row. -->
   <input type="text" id="search" placeholder = "Any character on the table">
@@ -12,7 +20,7 @@
       <th>Impressions</th>
       <th>Revenue</th>
     </tr>
-    {% for item in s_h%}
+    {% for item in data%}
     <tr class="search">
       <td>{{ item["date"] }}</td>
       <td>{{ item["hour"] }}</td>
@@ -38,7 +46,7 @@ var chart = new Chart(ctx, {
     // The data for our dataset
     data: {
         labels: [
-            {% for item in s_h %}
+            {% for item in data %}
               "{{ item["date"] }}",
             {% endfor %}
         ],
@@ -47,7 +55,7 @@ var chart = new Chart(ctx, {
             backgroundColor: 'rgba(255, 255, 255,0)',
             borderColor: 'rgb(255, 99, 132)',
             data: [
-              {% for item in s_h %}
+              {% for item in data %}
                 "{{ item["hour"] }}",
               {% endfor %}
             ]
@@ -57,7 +65,7 @@ var chart = new Chart(ctx, {
             backgroundColor: 'rgba(255, 255, 255,0)',
             borderColor: 'rgb(179, 179, 0)',
             data: [
-              {% for item in s_h %}
+              {% for item in data %}
                 "{{ item["clicks"] }}",
               {% endfor %}
             ]
@@ -67,7 +75,7 @@ var chart = new Chart(ctx, {
             backgroundColor: 'rgba(255, 255, 255,0)',
             borderColor: 'rgb(0, 153, 204)',
             data: [
-              {% for item in s_h %}
+              {% for item in data %}
                 "{{ item["impressions"] }}",
               {% endfor %}
             ]
@@ -77,7 +85,7 @@ var chart = new Chart(ctx, {
             backgroundColor: 'rgba(255, 255, 255,0)',
             borderColor: 'rgb(77, 255, 77)',
             data: [
-              {% for item in s_h %}
+              {% for item in data %}
                 "{{ item["revenue"] }}",
               {% endfor %}
             ]
